# r32system

./: CMakeLists.txt  README.md  app_win32.rc  r32setup.iss  res.qrc
src/: main.cpp
src/cmd/: basecmd.h  calccrcmd.cpp  calccrcmd.h  channelcmd.cpp  channelcmd.h  compoundcmd.cpp  compoundcmd.h  conditioncmd.cpp  conditioncmd.h  controlcmdflow.cpp  controlcmdflow.h  detectpointcmd.cpp  detectpointcmd.h  recorddata.cpp  recorddata.h  setaddresscmd.cpp  setaddresscmd.h  singlecmd.cpp  singlecmd.h  timercmd.cpp  timercmd.h
src/dbopt/: r32recordvalue.cpp  r32recordvalue.h
src/dbutil/: config.cpp  config.h  connectionpool.cpp  connectionpool.h  dbutil.cpp  json.cpp  json.h  sqls.cpp  sqls.h
src/res/: adminconfig.ini  detectvalue.sql  r32.qss
src/serialport/: analyserconstant.h  constant.h  handleanalyserdata.cpp  handleanalyserdata.h  handledata.cpp  handledata.h  handledatabase.cpp  handledatabase.h  handlemcudata.cpp  handlemcudata.h  handler32data.cpp  handler32data.h  mcuconstant.h  r32constant.h  serialportcom.cpp  serialportcom.h  serialportconfig.cpp  serialportconfig.h
src/widget/: connectwidget.cpp  connectwidget.h  labelbutton.cpp  labelbutton.h  mainwidget.cpp  mainwidget.h  mcuoperatewidget.cpp  mcuoperatewidget.h  operatebasewidget.cpp  operatebasewidget.h  operater32widget.cpp  operater32widget.h  operatewidget.cpp  operatewidget.h  pagewidget.cpp  pagewidget.h  pointsettingdialog.cpp  pointsettingdialog.h  querywidget.cpp  querywidget.h  r32analyticalwidget.cpp  r32analyticalwidget.h  serialportsettingsdialog.cpp  serialportsettingsdialog.h  statuswidget.cpp  (+5 more)
(+1 files in other folders)
